# timer

./: .gitignore  CMakeLists.txt  README.md  project.txt
src/: Makefile  alarm.h  clock.c  clock.h  main.c  stopWatch.c  stopWatch.h  timer.c  timer.h
